--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
         <title>{% block title %}Sandbox{% endblock %}</title>
         {% block stylesheets %}
             <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet" />
-            <link href="{{ asset('vendor/select2/select2.css') }}" rel="stylesheet" />
+            <link href="{{ asset('vendor/ivaynberg/select2/select2.css') }}" rel="stylesheet" />
 
             <style type="text/css">
                 .zenstruck-ajax-entity, .zenstruck-ajax-entity-required {
@@ -23,7 +23,7 @@
         {% block javascripts %}
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
             <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
-            <script src="{{ asset('vendor/select2/select2.js') }}"></script>
+            <script src="{{ asset('vendor/ivaynberg/select2/select2.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckform/js/helper.js') }}"></script>
 
             <script type="text/javascript">
