--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,7 +48,8 @@
             <div class="box">
                 <div class="box-inner">
                     {% block body %}{% endblock %}
-                    <p class="center" style="margin-bottom: 0;"><a href="https://github.com/kbond/sandbox">View the source for this site on Github</a></p>
+                    <hr />
+                    <p class="center" style="margin-bottom: 7px;"><a href="https://github.com/kbond/sandbox">View the source for this site on Github</a></p>
                 </div>
             </div>
             <div id="footer">
