--- a/src/Zenstruck/Bundle/DashboardBundle/Resources/views/Twitter/dashboard.html.twig
+++ b/src/Zenstruck/Bundle/DashboardBundle/Resources/views/Twitter/dashboard.html.twig
@@ -1,7 +1,55 @@
-{% extends layout %}
+{% extends manager.layout %}
 
 {% block title %}Dashboard{% endblock %}
 
 {% block body %}
-    Hello
+    <div class="row">
+        {% set column1 = manager.widgets('column1') %}
+        {% set column2 = manager.widgets('column2') %}
+        {% set column3 = manager.widgets('column3') %}
+
+        {% if not column1|length and not column2|length and not column3|length %}
+            <div class="span12">
+                {{ _self.widget_column(manager.widgets) }}
+            </div>
+        {% else %}
+            <div class="{% block column1_class %}span3{% endblock %}">
+                {{ _self.widget_column(column1) }}
+            </div>
+            {% if column2|length %}
+                <div class="{% block column2_class %}span6{% endblock %}">
+                    {{ _self.widget_column(column2) }}
+                </div>
+            {% endif %}
+            {% if column3|length %}
+                <div class="{% block column3_class %}span3{% endblock %}">
+                    {{ _self.widget_column(column3) }}
+                </div>
+            {% endif %}
+        {% endif %}
+    </div>
 {% endblock %}
+
+{% macro widget_column(widgets) %}
+    {% for widget in widgets %}
+        {{ _self.widget(widget) }}
+    {% endfor %}
+{% endmacro %}
+
+{% macro widget(widget) %}
+    <div class="dashboard-widget">
+        {% if widget.title %}
+            <div class="dashboard-widget-title">
+                {{ widget.title }}
+            </div>
+        {% endif %}
+
+        <div class="dashboard-widget-content"{% if widget.route and widget.ajax %} data-url="{{ path(widget.route, widget.params) }}"{% endif %}>
+            {% if widget.route and not widget.ajax %}
+                {% render path(widget.route, widget.params) %}
+            {% else %}
+                {% render widget.controller with widget.params %}
+            {% endif %}
+        </div>
+    </div>
+{% endmacro %}
