--- a/src/Zenstruck/Bundle/DashboardBundle/Resources/views/Twitter/layout.html.twig
+++ b/src/Zenstruck/Bundle/DashboardBundle/Resources/views/Twitter/layout.html.twig
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>{% block title %}{% endblock %}</title>
 
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet" />
+    <link href="{{ asset('bundles/zenstruckdashboard/css/twitter.css') }}" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
 <body>
