--- a/src/Zenstruck/Bundle/DashboardBundle/Resources/views/Twitter/dashboard.html.twig
+++ b/src/Zenstruck/Bundle/DashboardBundle/Resources/views/Twitter/dashboard.html.twig
@@ -32,24 +32,6 @@
 
 {% macro widget_column(widgets) %}
     {% for widget in widgets %}
-        {{ _self.widget(widget) }}
+        {% include 'ZenstruckDashboardBundle:Twitter:_widget.html.twig' with { 'widget': widget } %}
     {% endfor %}
-{% endmacro %}
-
-{% macro widget(widget) %}
-    <div class="dashboard-widget">
-        {% if widget.title %}
-            <div class="dashboard-widget-title">
-                {{ widget.title }}
-            </div>
-        {% endif %}
-
-        <div class="dashboard-widget-content"{% if widget.route and widget.ajax %} data-url="{{ path(widget.route, widget.params) }}"{% endif %}>
-            {% if widget.route and not widget.ajax %}
-                {% render path(widget.route, widget.params) %}
-            {% else %}
-                {% render widget.controller with widget.params %}
-            {% endif %}
-        </div>
-    </div>
 {% endmacro %}
