added esi/hinclude widgets

--- a/src/Sandbox/AppBundle/Resources/views/Widget/borderless.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/borderless.html.twig
@@ -1,2 +1,2 @@
 <p class="text-center">Widget Content...</p>
-<p class="text-center muted"><em>(borderless widget type)</em></p>
+<p class="text-center muted"><em>(embedded borderless widget type)</em></p>
