--- a/src/Sandbox/AppBundle/Resources/views/Widget/links.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/links.html.twig
@@ -4,4 +4,4 @@
     <li><a href="{{ path('homepage') }}">Sandbox Home</a></li>
     <li><a href="http://zenstruck.com">Zenstruck Home</a></li>
 </ul>
-<p class="text-center muted"><em>(template widget type)</em></p>
+<p class="text-center muted"><em>(embedded template widget type)</em></p>
