--- a/src/Sandbox/AppBundle/Resources/views/Widget/dashboard.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/dashboard.html.twig
@@ -3,6 +3,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="//mnot.github.com/hinclude/hinclude.js"></script>
+    <meta name="include_mode" content="async" />
 {% endblock %}
 
 {% block column1_class %}span3{% endblock %}
