--- a/src/Sandbox/AppBundle/Resources/views/Widget/esi.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/esi.html.twig
@@ -1,2 +1,5 @@
-<p class="text-center">Widget Content...</p>
+<p class="text-center">
+    {{ date()|date('Y-m-d h:i:s') }}<br />
+    <em>(cached for 10 seconds)</em>
+</p>
 <p class="text-center muted"><em>(esi route widget type)</em></p>
