--- a/src/Sandbox/AppBundle/Resources/views/Widget/config.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/config.html.twig
@@ -8,4 +8,4 @@
 
 <pre id="dashboard-config" class="pre-scrollable">{{ config }}</pre>
 
-<p class="text-center muted"><em>(embedded controller widget type)</em></p>
+<p class="text-center muted"><em>(embedded controller widget)</em></p>
