--- a/src/Sandbox/AppBundle/Resources/views/Widget/ajax.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/ajax.html.twig
@@ -1,2 +1,2 @@
 <p class="text-center">Widget Content...</p>
-<p class="text-center muted"><em>(ajax route widget type)</em></p>
+<p class="text-center muted"><em>(ajax route widget)</em></p>
