--- a/src/Sandbox/AppBundle/Resources/views/Widget/dashboard.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/dashboard.html.twig
@@ -6,6 +6,9 @@
     <meta name="include_mode" content="async" />
 {% endblock %}
 
+{% block meta_title %}Dashboard{% endblock %}
+{% block title %}ZenstruckDashboardBundle <small>Demo</small>{% endblock %}
+
 {% block column1_class %}span3{% endblock %}
 {% block column2_class %}span6{% endblock %}
 {% block column3_class %}span3{% endblock %}
