--- a/src/Sandbox/AppBundle/Resources/views/Widget/hinclude.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Widget/hinclude.html.twig
@@ -1,2 +1,2 @@
 <p class="text-center">Widget Content...</p>
-<p class="text-center muted"><em>(<a href="http://mnot.github.com/hinclude/">hinclude.js</a> route widget type)</em></p>
+<p class="text-center muted"><em>(<a href="http://mnot.github.com/hinclude/">hinclude.js</a> route widget)</em></p>
