--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="include_mode" content="async" />
         <title>{% block meta_title %}{{ block('title') }}{% endblock %} - Zenstruck Sandbox</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         {% block stylesheets %}
@@ -12,7 +13,7 @@
         {% endblock %}
     </head>
     <body>
-        {% render "zenstruck_dashboard.controller:menuAction" %}
+        {{ zenstruck_menu() }}
         <div class="container">
             <h1>{{ block('title') }}</h1>
             {% block body %}{% endblock %}
@@ -34,6 +35,7 @@
         {% block javascripts %}
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
             <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+            <script src="//mnot.github.com/hinclude/hinclude.js"></script>
             <script src="{{ asset('vendor/ivaynberg/select2/select2.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckform/js/helper.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckdashboard/js/helper.js') }}"></script>
