--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,6 +16,9 @@
         {{ zenstruck_menu() }}
         <div class="container">
             <h1>{{ block('title') }}</h1>
+
+            {{ zenstruck_breadcrumbs() }}
+
             {% block body %}{% endblock %}
 
             <div id="footer" class="text-center">
