--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         {% block stylesheets %}
             <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" />
-            <link href="{{ asset('vendor/ivaynberg/select2/select2.css') }}" rel="stylesheet" />
+            <link href="{{ asset('vendor/select2/select2.css') }}" rel="stylesheet" />
             <link href="{{ asset('bundles/zenstruckdashboard/css/twitter.css') }}" rel="stylesheet" />
             <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
         {% endblock %}
@@ -39,7 +39,7 @@
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
             <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
             <script src="//mnot.github.com/hinclude/hinclude.js"></script>
-            <script src="{{ asset('vendor/ivaynberg/select2/select2.js') }}"></script>
+            <script src="{{ asset('vendor/select2/select2.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckform/js/helper.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckdashboard/js/helper.js') }}"></script>
             <script src="{{ asset('js/script.js') }}"></script>
