--- a/src/Sandbox/AppBundle/Resources/views/Article/edit.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Article/edit.html.twig
@@ -3,8 +3,9 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
-    <form class="form-horizontal" method="post" novalidate="novalidate" {{ form_enctype(form) }}>
-        {{ form_widget(form) }}
+    <form class="form-horizontal" method="post" novalidate="novalidate" {{ form_enctype(grouped_form.form) }}>
+        {% include 'ZenstruckFormBundle:Twitter:grouped_form.html.twig' with { 'form': grouped_form } %}
+
         <div class="form-actions">
             <button class="btn btn-primary" type="submit">Edit</button>
             <a class="btn" href="{{ path('article') }}">Cancel</a>
