--- a/src/Sandbox/AppBundle/Resources/views/Article/new.html.twig
+++ b/src/Sandbox/AppBundle/Resources/views/Article/new.html.twig
@@ -3,8 +3,8 @@
 {% block title %}New Article{% endblock %}
 
 {% block body %}
-    <form class="form-horizontal" method="post" novalidate="novalidate" {{ form_enctype(form) }}>
-        {{ form_widget(form) }}
+    <form class="form-horizontal" method="post" novalidate="novalidate" {{ form_enctype(grouped_form.form) }}>
+        {% include 'ZenstruckFormBundle:Twitter:grouped_form.html.twig' with { 'form': grouped_form } %}
 
         <div class="form-actions">
             <button class="btn btn-primary" type="submit">Create</button>
