--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,6 +19,15 @@
 
             {{ zenstruck_breadcrumbs() }}
 
+            {% for type, flashMessages in app.session.flashBag.all %}
+                {% for flashMessage in flashMessages %}
+                    <div class="alert alert-{{ type }}">
+                        <a class="close" data-dismiss="alert" href="#">&times;</a>
+                        {{ flashMessage }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+
             {% block body %}{% endblock %}
 
             <div id="footer" class="text-center">
