begin moving filesystem functionality to manager class

--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/_table.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/_table.html.twig
@@ -8,10 +8,10 @@
         </tr>
     </thead>
     <tbody>
-    {% for dir in dirs %}
+    {% for dir in manager.directories %}
         <tr>
             <td>
-                <a href="{{ path('zenstruck_media_list', { 'path': path ~ '/' ~ dir.filename }) }}">
+                <a href="{{ path('zenstruck_media_list', { 'path': manager.path ~ '/' ~ dir.filename }) }}">
                     <i class="icon-folder-open"></i> {{ dir.filename }}
                 </a>
             </td>
@@ -20,13 +20,13 @@
             <td>&nbsp;</td>
         </tr>
     {% endfor %}
-    {% for file in files %}
+    {% for file in manager.files %}
         <tr>
             <td><i class="icon-file"></i> {{ file.filename }}</td>
             <td><em class="muted">{{ file.mTime|date }}</em></td>
             <td><em class="muted">{{ file.size }}</em></td>
             <td>
-                <a class="btn btn-mini btn-danger method-delete" href="{{ path('zenstruck_media_delete_file', { 'filename': file.filename, 'path': path }) }}"><i class="icon-trash icon-white"></i> Delete</a>
+                <a class="btn btn-mini btn-danger method-delete" href="{{ path('zenstruck_media_delete_file', { 'filename': file.filename, 'path': manager.path }) }}"><i class="icon-trash icon-white"></i> Delete</a>
             </td>
         </tr>
     {% endfor %}
