--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
@@ -12,7 +12,7 @@
         <div class="btn-toolbar">
             <div class="btn-group">
                 {% if manager.path %}
-                    <a class="btn btn-small" href="{{ path('zenstruck_media_list', { 'path': manager.ancestry[0:manager.ancestry|length-1]|join('/') }) }}"><i class="icon-arrow-left"></i></a>
+                    <a class="btn btn-small" href="{{ path('zenstruck_media_list', { 'path': manager.previousPath }) }}"><i class="icon-arrow-left"></i></a>
                 {% else %}
                     <span class="btn btn-small disabled"><i class="icon-arrow-left"></i></span>
                 {% endif %}
