added rename function

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,6 +51,7 @@
             <script src="{{ asset('vendor/select2/select2.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckform/js/helper.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckdashboard/js/helper.js') }}"></script>
+            <script src="{{ asset('bundles/zenstruckmedia/js/twitter.js') }}"></script>
             <script src="{{ asset('js/script.js') }}"></script>
         {% endblock %}
     </body>
