--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
@@ -63,6 +63,7 @@
                 </div>
             </form>
         </div>
+
         <div id="zenstruck-media-upload" class="modal hide fade">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -83,5 +84,27 @@
                 </div>
             </form>
         </div>
+
+        <div id="zenstruck-media-rename" class="modal hide fade">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h3>Rename</h3>
+            </div>
+            <form method="post" action="" class="form-horizontal">
+                <div class="modal-body">
+                    <div class="control-group">
+                        <label class="control-label" for="zenstruck-media-rename-new-name">New Name</label>
+                        <div class="controls">
+                            <input type="text" name="new_name" id="zenstruck-media-rename-new-name" autofocus="autofocus">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a href="#" class="btn" data-dismiss="modal">Close</a>
+                    <input type="submit" class="btn btn-primary" value="Rename" />
+                </div>
+            </form>
+        </div>
+
     </div>
 {% endblock %}
