--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
@@ -12,7 +12,7 @@
         <div class="btn-toolbar">
             <div class="btn-group">
                 {% if manager.path %}
-                    <a class="btn btn-small" href="{{ path('zenstruck_media_list', { 'path': manager.previousPath }) }}"><i class="icon-arrow-left"></i></a>
+                    <a class="btn btn-small" href="{{ path('zenstruck_media_list', manager.requestParams(manager.previousPath)) }}"><i class="icon-arrow-left"></i></a>
                 {% else %}
                     <span class="btn btn-small disabled"><i class="icon-arrow-left"></i></span>
                 {% endif %}
@@ -21,13 +21,13 @@
             <div class="btn-text">
                 /
                 {% if manager.path %}
-                    <a href="{{ path('zenstruck_media_list') }}"><em>root</em></a> /
+                    <a href="{{ path('zenstruck_media_list', manager.requestParams('/')) }}"><em>root</em></a> /
                 {% endif %}
                 {% set prev_path = [] %}
                 {% for dir in manager.ancestry %}
                     {% set prev_path = prev_path|merge([dir]) %}
                     {% if not loop.last %}
-                        <a href="{{ path('zenstruck_media_list', { 'path': prev_path|join('/') }) }}">{{ dir }}</a> /
+                        <a href="{{ path('zenstruck_media_list', manager.requestParams(prev_path|join('/'))) }}">{{ dir }}</a> /
                     {% else %}
                         {{ dir }}
                     {% endif %}
@@ -38,6 +38,22 @@
                 <a class="btn btn-small" data-toggle="modal" href="#zenstruck-media-mkdir"><i class="icon-folder-open"></i> New</a>
                 <a class="btn btn-small" data-toggle="modal" href="#zenstruck-media-upload"><i class="icon-upload"></i> Upload</a>
             </div>
+
+            {% if filesystems|length > 1 %}
+                <div class="btn-group">
+                    <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">
+                        Filesystem: {{ manager.name }}
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        {% for filesystem in filesystems %}
+                            {% if filesystem != manager.name %}
+                                <li><a href="{{ path('zenstruck_media_list', { 'filesystem': filesystem }) }}">Filesystem: {{ filesystem }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
         </div>
         <hr />
 
@@ -48,7 +64,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h3>Make Directory</h3>
             </div>
-            <form method="post" action="{{ path('zenstruck_media_mkdir', { 'path': manager.path }) }}" class="form-horizontal">
+            <form method="post" action="{{ path('zenstruck_media_mkdir', manager.requestParams) }}" class="form-horizontal">
                 <div class="modal-body">
                     <div class="control-group">
                         <label class="control-label" for="zenstruck-media-new-folder-name">Directory Name</label>
@@ -69,7 +85,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h3>Upload Files</h3>
             </div>
-            <form method="post" action="{{ path('zenstruck_media_upload', { 'path': manager.path }) }}" class="form-horizontal" enctype="multipart/form-data">
+            <form method="post" action="{{ path('zenstruck_media_upload', manager.requestParams) }}" class="form-horizontal" enctype="multipart/form-data">
                 <div class="modal-body">
                     <div class="control-group">
                         <label class="control-label" for="zenstruck-media-upload-files">Select a File</label>
