--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/list.html.twig
@@ -12,7 +12,7 @@
         <div class="btn-toolbar">
             <div class="btn-group">
                 {% if manager.path %}
-                    <a class="btn btn-small" href="{{ path('zenstruck_media_list', manager.requestParams(manager.previousPath)) }}"><i class="icon-arrow-left"></i></a>
+                    <a class="btn btn-small" href="{{ path('zenstruck_media_list', manager.requestParams({ 'path': manager.previousPath })) }}"><i class="icon-arrow-left"></i></a>
                 {% else %}
                     <span class="btn btn-small disabled"><i class="icon-arrow-left"></i></span>
                 {% endif %}
@@ -21,13 +21,13 @@
             <div class="btn-text">
                 /
                 {% if manager.path %}
-                    <a href="{{ path('zenstruck_media_list', manager.requestParams('/')) }}"><em>root</em></a> /
+                    <a href="{{ path('zenstruck_media_list', manager.requestParams({ 'path': null })) }}"><em>root</em></a> /
                 {% endif %}
                 {% set prev_path = [] %}
                 {% for dir in manager.ancestry %}
                     {% set prev_path = prev_path|merge([dir]) %}
                     {% if not loop.last %}
-                        <a href="{{ path('zenstruck_media_list', manager.requestParams(prev_path|join('/'))) }}">{{ dir }}</a> /
+                        <a href="{{ path('zenstruck_media_list', manager.requestParams({ 'path': prev_path|join('/') })) }}">{{ dir }}</a> /
                     {% else %}
                         {{ dir }}
                     {% endif %}
