--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/_file_actions.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/_file_actions.html.twig
@@ -1,2 +1,12 @@
-<a title="Delete" class="btn btn-mini btn-danger method-delete" href="{{ path('zenstruck_media_delete_'~(file.isDir ? 'dir' : 'file'), manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-trash icon-white"></i></a>
-<a title="Rename" href="#" class="btn btn-mini zenstruck-media-rename" data-name="{{ file.getBasename('.'~file.getExtension) }}" data-url="{{ path('zenstruck_media_rename_'~(file.isDir ? 'dir' : 'file'), manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-edit"></i></a>
+
+{% if file.isDir and manager.permissions.canDeleteDir %}
+    <a title="Delete" class="btn btn-mini btn-danger method-delete" href="{{ path('zenstruck_media_delete_dir', manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-trash icon-white"></i></a>
+{% elseif manager.permissions.canDeleteFile %}
+    <a title="Delete" class="btn btn-mini btn-danger method-delete" href="{{ path('zenstruck_media_delete_file', manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-trash icon-white"></i></a>
+{% endif %}
+
+{% if file.isDir and manager.permissions.canRenameDir %}
+    <a title="Rename" href="#" class="btn btn-mini zenstruck-media-rename" data-name="{{ file.getBasename('.'~file.getExtension) }}" data-url="{{ path('zenstruck_media_rename_dir', manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-edit"></i></a>
+{% elseif manager.permissions.canRenameFile %}
+    <a title="Rename" href="#" class="btn btn-mini zenstruck-media-rename" data-name="{{ file.getBasename('.'~file.getExtension) }}" data-url="{{ path('zenstruck_media_rename_file', manager.requestParams({ 'filename': file.getFilename })) }}"><i class="icon-edit"></i></a>
+{% endif %}
