--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,8 @@
         <title>{% block meta_title %}{{ block('title') }}{% endblock %} - Zenstruck Sandbox</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         {% block stylesheets %}
-            <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" />
+            <link href="{{ asset('vendor/bootstrap/docs/assets/css/bootstrap.css') }}" rel="stylesheet" />
+            <link href="{{ asset('vendor/bootstrap/docs/assets/css/bootstrap-responsive.css') }}" rel="stylesheet" />
             <link href="{{ asset('vendor/select2/select2.css') }}" rel="stylesheet" />
             <link href="{{ asset('bundles/zenstruckdashboard/css/twitter.css') }}" rel="stylesheet" />
             <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
