--- a/src/Zenstruck/MediaBundle/Resources/views/Twitter/_thumb.html.twig
+++ b/src/Zenstruck/MediaBundle/Resources/views/Twitter/_thumb.html.twig
@@ -1,4 +1,9 @@
 <ul class="thumbnails">
+    {% if manager.path %}
+        <li class="span2">
+            {{ _self.thumbnail(path('zenstruck_media_list', manager.requestParams({ 'path': manager.previousPath })), '...', asset('bundles/zenstruckmedia/images/icons/up.png')) }}
+        </li>
+    {% endif %}
     {% for file in manager.files %}
         <li class="span2">
             {% if file.isDir %}
@@ -13,14 +18,20 @@
                 {% endif %}
             {% endif %}
 
-            <a href="{{ src }}" title="{{ file.getFilename }}" class="thumbnail">
+            {{ _self.thumbnail(src, file.getFilename, image) }}
+        </li>
+    {% else %}
+        <li class="span2"><em>No Files</em></li>
+    {% endfor %}
+</ul>
+
+{% macro thumbnail(src, filename, image) %}
+    <a href="{{ src }}" title="{{ filename }}" class="thumbnail">
                 <span class="zenstruck-media-thumbnail-container">
                     <span>
                         <img src="{{ image }}" />
                     </span>
                 </span>
-                <span class="zenstruck-media-thumbnail-caption">{{ file.getFilename }}</span>
-            </a>
-        </li>
-    {% endfor %}
-</ul>
+        <span class="zenstruck-media-thumbnail-caption">{{ filename }}</span>
+    </a>
+{% endmacro %}
