--- a/src/Zenstruck/MediaBundle/Resources/public/css/twitter.css
+++ b/src/Zenstruck/MediaBundle/Resources/public/css/twitter.css
@@ -26,7 +26,7 @@
     border-left: none;
 }
 
-#zenstruck-media .zenstruck-media-thumbnail-container {
+#zenstruck-media-thumb .zenstruck-media-thumbnail-container {
     margin-bottom: 4px;
     border-bottom: 1px solid #eee;
     display: table;
@@ -34,18 +34,27 @@
     width: 100%;
 }
 
-#zenstruck-media .zenstruck-media-thumbnail-container span {
+#zenstruck-media-thumb .zenstruck-media-thumbnail-container span {
     display: table-cell;
     text-align: center;
     vertical-align: middle;
 }
 
-#zenstruck-media .zenstruck-media-thumbnail-caption {
+#zenstruck-media-thumb li {
+    position: relative;
+}
+#zenstruck-media-thumb .zenstruck-media-thumbnail-caption {
     text-align: center;
     display: block;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+#zenstruck-media-thumb .zenstruck-media-actions {
+    position: absolute;
+    top: 3px;
+    right: 3px;
 }
 
 /* Custom Icons */
