--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,6 +10,7 @@
             <link href="{{ asset('vendor/bootstrap/docs/assets/css/bootstrap-responsive.css') }}" rel="stylesheet" />
             <link href="{{ asset('vendor/select2/select2.css') }}" rel="stylesheet" />
             <link href="{{ asset('bundles/zenstruckdashboard/css/twitter.css') }}" rel="stylesheet" />
+            <link href="{{ asset('bundles/zenstruckmedia/css/twitter.css') }}" rel="stylesheet" />
             <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
         {% endblock %}
     </head>
@@ -47,7 +48,7 @@
         </div>
         {% block javascripts %}
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-            <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+            <script src="{{ asset('vendor/bootstrap/docs/assets/js/bootstrap.js') }}"></script>
             <script src="{{ asset('vendor/hinclude/hinclude.js') }}"></script>
             <script src="{{ asset('vendor/select2/select2.js') }}"></script>
             <script src="{{ asset('bundles/zenstruckform/js/helper.js') }}"></script>
